Topic numbers edexcel

--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/edexcel_alevel_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/edexcel_alevel_notes.html
@@ -21,120 +21,120 @@
             <div class="portfolio-items-wrapper">
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio1.jpg)" title="A bunch of materials"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio1.jpg)" title="A bunch of materials"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="notes_topics/materialsnotes.html">Materials</a>
+                            <a href="notes_topics/materialsnotes.html">Topic 1: Materials</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio2.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio2.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="notes_topics/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a>
+                            <a href="notes_topics/PerformanceCharacteristicsOfMaterialsNotes.html">Topic 2: Performance Characteristics Of Materials</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio3.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="notes_topics/ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a>
+                            <a href="notes_topics/ProcessesTechniquesAndSpecialistTools.html">Topic 3: Processes Techniques and Specialist Tools</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio4.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio4.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="notes_topics/DigitalTechnologies.html">Digital Technologies</a>
+                            <a href="notes_topics/DigitalTechnologies.html">Topic 4: Digital Technologies</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio5.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio5.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html">Factors Influencing The Development Of Products</a>
+                            <a href="notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html">Topic 5: Factors Influencing The Development Of Products</a>
                             <!-- <a href="Notes\FactorsInfluencingTheDevelopmentOfProducts.html">Factors Influencing The Development Of Products</a> -->
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio6.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio6.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
-                            <a href="notes_topics/EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a>
+                            <a href="notes_topics/EffectsOfTechnologicalDevelopments.html">Topic 6: Effects Of Technological Developments</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio7.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio7.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\AdoptingSafeWorkingPractices.html">Adopting Safe Working Practices and Reacting To Potential Hazards</a> -->
-                            <a href="notes_topics/AdoptingSafeWorkingPractices.html">Adopting Safe Working Practices and Reacting To Potential Hazards</a>
+                            <a href="notes_topics/AdoptingSafeWorkingPractices.html">Topic 7: Adopting Safe Working Practices and Reacting To Potential Hazards</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio8.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio8.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\FeaturesOfManufacturingIndustries.html">Features Of Manufacturing Industries</a> -->
-                            <a href="notes_topics/FeaturesOfManufacturingIndustries.html">Features Of Manufacturing Industries</a>
+                            <a href="notes_topics/FeaturesOfManufacturingIndustries.html">Topic 8: Features Of Manufacturing Industries</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio9.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio9.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DesigningForMaintenanceAndTheCleanerEnvironment.html">Designing For Maintenance and The Cleaner Environment</a> -->
-                            <a href="notes_topics/DesigningForMaintenanceAndTheCleanerEnvironment.html">Designing For Maintenance and The Cleaner Environment</a>
+                            <a href="notes_topics/DesigningForMaintenanceAndTheCleanerEnvironment.html">Topic 9: Designing For Maintenance and The Cleaner Environment</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio10.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio10.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="notes_topics/CurrentLegislation.html">Current Legislation</a>
+                            <a href="notes_topics/CurrentLegislation.html">Topic 10: Current Legislation</a>
                             <!-- <a href="Notes\CurrentLegislation.html">Current Legislation</a> -->
                         </div>
                     </div>
                 </div>
                 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio11.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio11.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\CurrentLegislation.html">Current Legislation</a> -->
-                            <a href="notes_topics/InformationHandlingModellingAndForwardPlanning.html">Information Handling, Modelling and Forward Planning</a>
+                            <a href="notes_topics/InformationHandlingModellingAndForwardPlanning.html">Topic 11: Information Handling, Modelling and Forward Planning</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio12.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio12.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="notes_topics/FurtherProcessesAndTechniques.html">Further Processes and Techniques</a>
+                            <a href="notes_topics/FurtherProcessesAndTechniques.html">Topic 12: Further Processes and Techniques</a>
                             <!-- <a href="Notes\FurtherProcessesAndTechniques.html">Further Processes and Techniques</a> -->
                         </div>
                     </div>
@@ -153,7 +153,7 @@
             </div>
         </div>
 
-        <script src="../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
 
@@ -164,5 +164,5 @@
     </style>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
