--- a/pastpapers/papers_level/pastpapers_alevel.html
+++ b/pastpapers/papers_level/pastpapers_alevel.html
@@ -25,7 +25,7 @@
                                 <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5);"></div>
                                 <div class="img-text-wrapper-notes">
                                     <div class="blurbox">
-                                        <a href="pastpaers_alevel/.html">Edexcel A-Level Past Papers </a>
+                                        <a href="pastpaers_alevel/pastpapers_alevel_edexcel.html">Edexcel A-Level Past Papers </a>
                                     </div>
                                 </div>
                             </div>
@@ -34,7 +34,7 @@
                                 <div class="portfolio-img-background-notes" style="background-color: rgb(253, 21, 222, 0.5);"></div>
                                 <div class="img-text-wrapper-notes">
                                     <div class="blurbox">
-                                        <a href="pastpaers_alevel/.html">OCR A-Level Past Papers </a>
+                                        <a href="pastpaers_alevel/pastpapers_alevel_ocr.html">OCR A-Level Past Papers </a>
                                     </div>
                                 </div>
                             </div>
@@ -43,7 +43,7 @@
                                 <div class="portfolio-img-background-notes" style="background-color: rgb(0, 10, 117, 0.5);"></div>
                                 <div class="img-text-wrapper-notes">
                                     <div class="blurbox">
-                                        <a href="pastpaers_alevel/.html">CIE A-Level Past Papers </a>
+                                        <a href="pastpaers_alevel/pastpapers_alevel_cie.html">CIE A-Level Past Papers </a>
                                     </div>
                                 </div>
                             </div>
