--- a/pastpapers/papers_level/pastpaers_alevel/pastpapers_alevel_aqa.html
+++ b/pastpapers/papers_level/pastpaers_alevel/pastpapers_alevel_aqa.html
@@ -19,7 +19,7 @@
                             <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2023P1Q.pdf">2023 Paper 1</a>
                         </div>
                         <div class="blurbox">
-                            <a href="">2023 Paper 1 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2023P1MS.pdf">2023 Paper 1 Markscheme</a>
                         </div>
                     </div>
                 </div>
@@ -28,10 +28,10 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="/.html">2023 Paper 2</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2023P2Q.pdf">2023 Paper 2</a>
                         </div>
                         <div class="blurbox">
-                            <a href="/.html">2023 Paper 2 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2023P2MS.pdf">2023 Paper 2 Markscheme</a>
                         </div>
                     </div>
                 </div>
@@ -40,10 +40,10 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="/.html">2022 Paper 1</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2022P1Q.pdf">2022 Paper 1</a>
                         </div>
                         <div class="blurbox">
-                            <a href="/.html">2022 Paper 1 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2022P1MS.pdf">2022 Paper 1 Markscheme</a>
                         </div>
                     </div>
                 </div>
@@ -52,10 +52,10 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="">2022 Paper 2</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2022P2Q.pdf">2022 Paper 2</a>
                         </div>
                         <div class="blurbox">
-                            <a href="/.html">2022 Paper 2 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2022P2MS.pdf">2022 Paper 2 Markscheme</a>
                         </div>
                     </div>
                 </div>
@@ -64,10 +64,10 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="/.html">2021 Paper 1</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2021P1Q.pdf">2021 Paper 1</a>
                         </div>
                         <div class="blurbox">
-                            <a href="/.html">2021 Paper 1 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2021P1MS.pdf">2021 Paper 1 Markscheme</a>
                         </div>
                     </div>
                 </div>
@@ -76,10 +76,10 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/safety_in_products_and_services_notes.html">2021 Paper 2</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2021P2Q.pdf">2021 Paper 2</a>
                         </div>
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2021 Paper 2 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2021P2MS.pdf">2021 Paper 2 Markscheme</a>
                         </div>
                     </div>
                 </div>
@@ -88,10 +88,10 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2020 Paper 1</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2020P1Q.pdf">2020 Paper 1</a>
                         </div>
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2020 Paper 1 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2020P1MS.pdf">2020 Paper 1 Markscheme</a>
                         </div>
                     </div>
                 </div>
@@ -100,10 +100,10 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/safety_in_products_and_services_notes.html">2020 Paper 2</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2020P2Q.pdf">2020 Paper 2</a>
                         </div>
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2020 Paper 2 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2020P2MS.pdf">2020 Paper 2 Markscheme</a>
                         </div>
                     </div>
                 </div>
@@ -112,10 +112,10 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2019 Paper 1</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2019P1Q.pdf">2019 Paper 1</a>
                         </div>
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2019 Paper 1 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2019P1MS.pdf">2019 Paper 1 Markscheme</a>
                         </div>
                     </div>
                 </div>
@@ -124,13 +124,45 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/safety_in_products_and_services_notes.html">2019 Paper 2</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2019P2Q.pdf">2019 Paper 2</a>
                         </div>
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2019 Paper 2 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2019P2MS.pdf">2019 Paper 2 Markscheme</a>
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2019P1QASL.pdf">2019 Paper 1 (AS Level)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2019P1MSASL.pdf">2019 Paper 1 Markscheme (AS Level)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2018P1QAS.pdf">2018 Paper 1 (AS Level)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2018P1MSAS.pdf">2018 Paper 1 Markscheme (AS Level)</a>
+                        </div>
+                    </div>
+                </div>
+
+                
 
             </div>
         </div>
