edexcel a level fixed

--- a/pastpapers/papers_level/pastpaers_alevel/pastpapers_alevel_edexcel.html
+++ b/pastpapers/papers_level/pastpaers_alevel/pastpapers_alevel_edexcel.html
@@ -71,6 +71,223 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2019ASQ.pdf">2019 Paper 1 (AS Level)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2019ASMS.pdf">2019 Paper 1 Markscheme (AS Level)</a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2018ASQ.pdf">2018 Paper 1 (AS Level)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2018ASMS.pdf">2018 Paper 1 Markscheme (AS Level)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_SpecPaper.pdf">Specification Paper (with markscheme)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2016P1Q.pdf">2016  Paper 1 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2016P1MS.pdf">2016 Paper 1 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2016P2Q.pdf">2016  Paper 2 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2016P2MS.pdf">2016 Paper 2 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2016P1Q.pdf">2016  Paper 1 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2016P1MS.pdf">2016 Paper 1 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2016P2Q.pdf">2016  Paper 2 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2016P2MS.pdf">2016 Paper 2 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2015P1Q.pdf">2015  Paper 1 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2015P1MS.pdf">2015 Paper 1 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2015P2Q.pdf">2015  Paper 2 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2015P2MS.pdf">2015 Paper 2 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2014P1Q.pdf">2014  Paper 1 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2014P1MS.pdf">2014 Paper 1 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2013P2Q.pdf">2013  Paper 2 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2013P2MS.pdf">2013 Paper 2 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2012P1Q.pdf">2012  Paper 1 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2012P1MS.pdf">2012 Paper 1 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2012P2Q.pdf">2012  Paper 2 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2012P2MS.pdf">2012 Paper 2 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2011P1Q.pdf">2011  Paper 1 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2011P1MS.pdf">2011 Paper 1 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2011P2Q.pdf">2011  Paper 2 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2011P2MS.pdf">2011 Paper 2 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2010P1Q.pdf">2010  Paper 1 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2010P1MS.pdf">2010 Paper 1 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2010P2Q.pdf">2010  Paper 2 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2010P2MS.pdf">2010 Paper 2 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 60, 255, 0.5); border: 2px solid rgb(0, 60, 255);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2009P1Q.pdf">2009  Paper 1 (Legacy)</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/Edexcel_A_Level/Edexcel_2009P1MS.pdf">2009 Paper 1 Markscheme (Legacy)</a>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
 
