--- a/pastpapers/papers_level/pastpaers_alevel/pastpapers_alevel_cie.html
+++ b/pastpapers/papers_level/pastpaers_alevel/pastpapers_alevel_cie.html
@@ -16,6 +16,30 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(0, 10, 117, 0.5); border: 2px solid rgb(0, 10, 117);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
+                            <a href="../../../documents/pastpapers/CIE_A_Level/CIE_2023_P1Q.pdf">2023 Paper 1</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/CIE_A_Level/CIE_2023_P1MS.pdf">2023 Paper 1 Markscheme</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 10, 117, 0.5); border: 2px solid rgb(0, 10, 117);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/CIE_A_Level/CIE_2023_P3Q.pdf">2023 Paper 3 </a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/CIE_A_Level/CIE_2023P3MS.pdf">2023 Paper 3 Markscheme</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 10, 117, 0.5); border: 2px solid rgb(0, 10, 117);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
                             <a href="../../../documents/pastpapers/CIE_A_Level/CIE_2022_P1Q.pdf">2022 Paper 1</a>
                         </div>
                         <div class="blurbox">
