--- a/pastpapers/papers_level/pastpaers_gcse/pastpapers_gcse_aqa.html
+++ b/pastpapers/papers_level/pastpaers_gcse/pastpapers_gcse_aqa.html
@@ -16,10 +16,10 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="../../../documents/pastpapers/AQA_A_Level/AQA_2023P1Q.pdf">2023 Paper 1</a>
+                            <a href="../../../documents/pastpapers/AQA_GCSE/AQA_2023P1Q.pdf">2023 Paper 1</a>
                         </div>
                         <div class="blurbox">
-                            <a href="">2023 Paper 1 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_GCSE/AQA_2023P1MS.pdf">2023 Paper 1 Markscheme</a>
                         </div>
                     </div>
                 </div>
@@ -28,10 +28,10 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="/.html">2023 Paper 2</a>
+                            <a href="../../../documents/pastpapers/AQA_GCSE/AQA_2022P1Q.pdf">2022 Paper 1</a>
                         </div>
                         <div class="blurbox">
-                            <a href="/.html">2023 Paper 2 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_GCSE/AQA_2022P1MS.pdf">2022 Paper 1 Markscheme</a>
                         </div>
                     </div>
                 </div>
@@ -40,10 +40,10 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="/.html">2022 Paper 1</a>
+                            <a href="../../../documents/pastpapers/AQA_GCSE/AQA_2021P1Q.pdf">2021 Paper 1</a>
                         </div>
                         <div class="blurbox">
-                            <a href="/.html">2022 Paper 1 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_GCSE/AQA_2021P1MS.pdf">2021 Paper 1 Markscheme</a>
                         </div>
                     </div>
                 </div>
@@ -52,86 +52,13 @@
                     <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="">2022 Paper 2</a>
+                            <a href="../../../documents/pastpapers/AQA_GCSE/AQA_2020P1Q.pdf">2020 Paper 1</a>
                         </div>
                         <div class="blurbox">
-                            <a href="/.html">2022 Paper 2 Markscheme</a>
+                            <a href="../../../documents/pastpapers/AQA_GCSE/AQA_2020P1MS.pdf">2020 Paper 1 Markscheme</a>
                         </div>
                     </div>
                 </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="/.html">2021 Paper 1</a>
-                        </div>
-                        <div class="blurbox">
-                            <a href="/.html">2021 Paper 1 Markscheme</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/safety_in_products_and_services_notes.html">2021 Paper 2</a>
-                        </div>
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2021 Paper 2 Markscheme</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2020 Paper 1</a>
-                        </div>
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2020 Paper 1 Markscheme</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/safety_in_products_and_services_notes.html">2020 Paper 2</a>
-                        </div>
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2020 Paper 2 Markscheme</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2019 Paper 1</a>
-                        </div>
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2019 Paper 1 Markscheme</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/safety_in_products_and_services_notes.html">2019 Paper 2</a>
-                        </div>
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html">2019 Paper 2 Markscheme</a>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
 
