past papers donr

--- a/pastpapers/papers_level/pastpaers_gcse/pastpapers_gcse_ocr.html
+++ b/pastpapers/papers_level/pastpaers_gcse/pastpapers_gcse_ocr.html
@@ -14,65 +14,80 @@
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-color: rgb(0, 10, 117, 0.5); border: 2px solid rgb(0, 10, 117);"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="../../../documents/pastpapers/OCR_A_Level/OCR_2023P1Q.pdf">2023 Paper 1</a>
-                        </div>
-                        <div class="blurbox">
-                            <a href="../../../documents/pastpapers/OCR_A_Level/OCR_2023P1MS.pdf">2023 Paper 1 Markscheme</a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 10, 117, 0.5); border: 2px solid rgb(0, 10, 117);"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="../../../documents/pastpapers/OCR_A_Level/OCR_2022P1Q.pdf">2022 Paper 1</a>
-                        </div>
-                        <div class="blurbox">
-                            <a href="../../../documents/pastpapers/OCR_A_Level/OCR_2022P1MS.pdf">2022 Paper 1 Markscheme</a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 10, 117, 0.5); border: 2px solid rgb(0, 10, 117);"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="../../../documents/pastpapers/OCR_A_Level/OCR_2021P1Q.pdf">2021 Paper 1</a>
-                        </div>
-                        <div class="blurbox">
-                            <a href="../../../documents/pastpapers/OCR_A_Level/OCR_2021P1MS.pdf">2021 Paper 1 Markscheme</a>
-                        </div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2023P1Q.pdf">2023 Paper 1</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2023P1MS.pdf">2023 Paper 1 Markscheme</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2023P1RB.pdf">2023 Paper 1 Resource Booklet</a>
+                            </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-color: rgb(0, 10, 117, 0.5); border: 2px solid rgb(0, 10, 117);"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="../../../documents/pastpapers/OCR_A_Level/OCR_2020P1Q.pdf">2020 Paper 1</a>
-                        </div>
-                        <div class="blurbox">
-                            <a href="../../../documents/pastpapers/OCR_A_Level/OCR_2020P1MS.pdf">2020 Paper 1 Markscheme</a>
-                        </div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2022P1Q.pdf">2022 Paper 1</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2022P1MS.pdf">2022 Paper 1 Markscheme</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2022P1RB.pdf">2022 Paper 1 Resource Booklet</a>
+                            </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-color: rgb(0, 10, 117, 0.5); border: 2px solid rgb(0, 10, 117);"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="../../../documents/pastpapers/OCR_A_Level/OCR_2019P1Q.pdf">2019 Paper 1</a>
-                        </div>
-                        <div class="blurbox">
-                            <a href="../../../documents/pastpapers/OCR_A_Level/OCR_2019P1MS.pdf">2019 Paper 1 Markscheme</a>
-                        </div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2021P1Q.pdf">2021 Paper 1</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2021P1MS.pdf">2021 Paper 1 Markscheme</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2021P1RB.pdf">2021 Paper 1 Resource Booklet</a>
+                            </div>
                     </div>
                 </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 10, 117, 0.5); border: 2px solid rgb(0, 10, 117);"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2020P1Q.pdf">2020 Paper 1</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2020P1MS.pdf">2020 Paper 1 Markscheme</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2020P1RB.pdf">2020 Paper 1 Resource Booklet</a>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(0, 10, 117, 0.5); border: 2px solid rgb(0, 10, 117);"></div>
+                        <div class="img-text-wrapper-notes">
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2019P1Q.pdf">2019 Paper 1</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2019P1MS.pdf">2019 Paper 1 Markscheme</a>
+                            </div>
+                            <div class="blurbox">
+                                <a href="../../../documents/pastpapers/OCR_GCSE/OCR_2019P1RB.pdf">2019 Paper 1 Resource Booklet</a>
+                            </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
 
